Updates metadata and branding for new domain and assets
Replaces old URLs, images, and favicon references with new domain and updated assets to align with the rebranding of Harvest Simulator.

Adds logo image to the main page and adjusts header placement for better visual hierarchy. Improves consistency in metadata across pages.

Ensures all navigation and canonical links reflect the updated structure.

--- a/play/harvest-simulator.html
+++ b/play/harvest-simulator.html
@@ -9,32 +9,28 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Play Harvest Simulator">
   <meta property="og:description" content="Grow your own virtual farm in this addictive browser-based simulator. No downloads required.">
-  <meta property="og:image" content="https://bigfoot9999s-games.pages.dev/harvest-simulator/assets/cover.jpg">
-  <meta property="og:url" content="https://bigfoot9999s-games.pages.dev/play/harvest-simulator.html">
+  <meta property="og:image" content="/images/farmsimlogo.jpg">
+  <meta property="og:url" content="https://playharvestsim.pages.dev/play/harvest-simulator.html">
   <meta property="og:type" content="game">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Play Harvest Simulator">
   <meta name="twitter:description" content="Click, plant, harvest, and upgrade your way to farming glory. Free online simulation game.">
-  <meta name="twitter:image" content="https://bigfoot9999s-games.pages.dev/harvest-simulator/assets/cover.jpg">
-
+  <meta name="twitter:image" content="https://playharvestsim.pages.dev/harvest-simulator/assets/cover.jpg">
+  <!-- Favicon  -->
+  <link rel="icon" href="/images/harvest-simulator.avif" type="image/x-icon">
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
 
 
   <nav>
+        <h2>Harvest Simulator</h2>
+
     <a href="../index.html">Home</a>
-    <a href="../#features">Features</a>
-    <a href="../privacy-policy.html">Privacy Policy</a>
   </nav>
-  <header>
-    <div class="container">
-      <h1>Harvest Simulator</h1>
-      <p>Build your dream farm, one click at a time!</p>
-    </div>
-  </header>
+ 
 
   <main class="section">
     <h2>Harvest Simulator</h2>
@@ -66,7 +62,12 @@
       <p>Upgrade tools early, and reinvest your coins wisely to grow faster!</p>
     </section>
   </main>
-
+ <header>
+    <div class="container">
+      <h1>Harvest Simulator</h1>
+      <p>Build your dream farm, one click at a time!</p>
+    </div>
+  </header>
   <footer>
     <p>&copy; 2025 Bigfoot's Game Shack. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
   </footer>
