--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Harvest Simulator | Grow, Build, Thrive">
   <meta property="og:description" content="Play Harvest Simulator — the ultimate free browser farming game. Plant crops, harvest, expand your land, and upgrade your tools. No downloads required!">
-  <meta property="og:url" content="https://bigfoot9999s-games.pages.dev/harvest-simulator">
-  <meta property="og:image" content="https://bigfoot9999s-games.pages.dev/assets/cover.jpg">
+  <meta property="og:url" content="https://playharvestsim.pages.dev/harvest-simulator">
+  <meta property="og:image" content="https://playharvestsim.pages.dev/assets/cover.jpg">
   <meta property="og:site_name" content="Harvest Simulator">
 
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Harvest Simulator | Grow, Build, Thrive">
   <meta name="twitter:description" content="Free online farming simulator game. Manage your land, harvest crops, and become the ultimate farmer.">
-  <meta name="twitter:image" content="https://bigfoot9999s-games.pages.dev/assets/cover.jpg">
+  <meta name="twitter:image" content="https://playharvestsim.pages.dev/assets/cover.jpg">
   <meta name="twitter:site" content="@bigfoot9999">
+  <link rel="icon" href="/images/harvest-simulator.avif" type="image/x-icon">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://bigfoot9999s-games.pages.dev/harvest-simulator">
+  <link rel="canonical" href="https://playharvestsim.pages.dev/harvest-simulator">
 
   <!-- Favicon -->
-  <link rel="icon" href="https://bigfoot9999s-games.pages.dev/assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://playharvestsim.pages.dev/assets/favicon.ico" type="image/x-icon">
 
   <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
@@ -35,8 +36,8 @@
     "@type": "VideoGame",
     "name": "Harvest Simulator",
     "description": "Harvest Simulator is a browser-based farming simulation game where you grow crops, earn coins, and expand your land. Start small and become the ultimate harvester.",
-    "url": "https://bigfoot9999s-games.pages.dev/harvest-simulator",
-    "image": "https://bigfoot9999s-games.pages.dev/assets/cover.jpg",
+    "url": "https://playharvestsim.pages.dev/harvest-simulator",
+    "image": "https://playharvestsim.pages.dev/images/harvest-simulator.avif",
     "genre": ["Simulation", "Idle", "Farming"],
     "operatingSystem": "All (browser-based)",
     "author": {
@@ -70,6 +71,8 @@
   </nav>
 <header>
     <div class="container">
+      
+      <img src="/images/harvest-simulator.avif" alt="Harvest Simulator Logo" class="logo">
       <h1>Harvest Simulator</h1>
       <p>Grow your farm. Upgrade your tools. Become the ultimate harvester!</p>
       <a href="/play/harvest-simulator.html" class="play-button">Play Now</a>
