--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,6 +6,8 @@
   <title>Privacy Policy | Harvest Simulator</title>
   <meta name="description" content="Privacy Policy for Harvest Simulator, explaining how we collect, use, and protect your data." />
   <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="/images/harvest-simulator.avif" type="image/x-icon">
+
 </head>
 <body> <nav>
     
