--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="google-site-verification" content="17dinb5b-QEZz8CfKEUNy_eM_P2ebyM-cYBDVUsCQMM" />
   <title>Harvest Simulator | Grow, Build, Thrive</title>
   <meta name="description" content="Play Harvest Simulator — the ultimate free browser farming game. Plant crops, harvest, expand your land, and upgrade your tools. No downloads required!">
 
@@ -59,6 +59,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <link rel="stylesheet" href="styles.css">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W3D3QCMR21"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W3D3QCMR21');
+</script>
 </head>
 <body>
 
