Adds embedded YouTube videos and 'Play Now' section
Integrates multiple YouTube video iframes to enhance content presentation and user engagement.

Adds a visually styled 'Play Now' section with a button to encourage game participation.

Includes CSS updates to center iframes and style the 'Play Now' section for better user experience and aesthetics.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
         <li>💸 Trade resources and invest in automation</li>
         <li>🎉 Earn achievements and seasonal event rewards</li>
       </ul>
+
     </section>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/NGmOwdbl44Q?si=EuL_-OY_-uUjtKkC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" class="yt-iframe"></iframe>
 
     <!-- How to Play -->
     <section id="how-to-play" class="section">
@@ -113,6 +115,7 @@
         <li>Buy new land and automate your farm.</li>
       </ol>
     </section>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/eCQZDU3I8to?si=3r7mCuvfLIk2R0EZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" class="yt-iframe"></iframe>
 
     <!-- Reviews Section -->
     <section id="reviews" class="section">
@@ -130,6 +133,13 @@
         <p>"It looks basic at first, but once I unlocked automation and seasons, it got really strategic." – Leah K.</p>
       </article>
     </section>
+    <div id='tpYtContainer'><iframe width="540" height="920" src="https://www.youtube.com/embed/I8l5ijGQ1xs" frameborder="0" class="yt-iframe"></iframe></div>
+    <!--Play now-->
+    <div class="play-now">
+      <h2>Ready to Play?</h2>
+      <a href="/play/harvest-simulator.html" class="play-button enhanced-play-button">Play Now</a>
+    </div>
+  
   </main>
 
   <footer>
