--- a/play/harvest-simulator.html
+++ b/play/harvest-simulator.html
@@ -58,11 +58,21 @@
         <li>🏆 Complete challenges to earn rewards.</li>
       </ul>
     </section>
-
+    <section style="margin-top: 2rem;">
+      <h3>Game Features</h3>
+      <ul>
+        <li>🌾 Realistic farming simulation with idle mechanics.</li>
+        <li>🌍 Expand your farm and automate tasks.</li>
+        <li>💎 Upgrade tools and unlock new crops.</li>
+        <li>🎮 Play for free in your browser, no downloads required!</li>
+      </ul>
+    </section>
     <section style="margin-top: 2rem;">
       <h3>Tips</h3>
       <p>Upgrade tools early, and reinvest your coins wisely to grow faster!</p>
     </section>
+          <iframe style="margin-top: 2rem;"width="560" height="315" src="https://www.youtube.com/embed/eCQZDU3I8to?si=3r7mCuvfLIk2R0EZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" class="yt-iframe"></iframe>
+
   </main>
  <header>
     <div class="container">
