Improves UI styling and accessibility
Disables the logo image in the header for a cleaner design.
Enhances header and iframe styling with better margins and alignment.
Adds a blurred background with fixed attachment for visual appeal.
Updates button text to uppercase for improved readability.
Fixes minor formatting inconsistencies in CSS comments.

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 <header>
     <div class="container">
       
-      <img src="/images/harvest-simulator.avif" alt="Harvest Simulator Logo" class="logo">
+      <!--<img src="/images/harvest-simulator.avif" alt="Harvest Simulator Logo" class="logo">-->
       <h1>Harvest Simulator</h1>
       <p>Grow your farm. Upgrade your tools. Become the ultimate harvester!</p>
-      <a href="/play/harvest-simulator.html" class="play-button">Play Now</a>
+      <a href="/play/harvest-simulator.html" class="play-button">PLAY NOW</a>
     </div>
   </header>
   <main>
