--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <nav>
     <!--Add a title that says harvest simulator-->
-    <h2>Harvest Simulator</h2>
+    <img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo">
     <a href="#features">Features</a>
     <a href="#how-to-play">How to Play</a>
     <a href="#reviews">Reviews</a>
@@ -98,7 +98,7 @@
         <li>🛠️ Unlock tool upgrades to harvest faster</li>
         <li>🌾 Buy new plots and expand your farm empire</li>
         <li>💸 Trade resources and invest in automation</li>
-        <li>🎉 Earn achievements and seasonal event rewards</li>
+      <li>🎉 Earn achievements and seasonal event rewards</li>
       </ul>
 
     </section>
