--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,7 +11,8 @@
 
 </head>
 <body> <nav>
-    
+        <img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo">
+
     <a href="/index.html">Home</a>
     <a href="/#features">Features</a>
     <a href="/#how-to-play">How to Play</a>
