--- a/play/harvest-sim-files/frivez.com/games/harvest-simulator/index.html
+++ b/play/harvest-sim-files/frivez.com/games/harvest-simulator/index.html
@@ -11,6 +11,48 @@
     <script src="https://lablockedgames.com/poki/poki-sdk.js"></script>
     <script src="playcanvas-stable.min.js"></script>
     <script src="__settings__.js"></script>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7257238324060789"
+        crossorigin="anonymous"></script>
+    <meta name="description" content="Harvest Simulator is a free, browser-based farming game where you can plant crops, harvest them for coins, and expand your farm. No downloads required!" />   
+    <meta property="og:title" content="Play Harvest Simulator">
+    <meta property="og:description" content="Grow your own virtual farm in this addictive
+browser-based simulator. No downloads required.">
+    <meta property="og:image" content="/images/farmsimlogo.jpg">
+    <meta property="og:url" content="https://playharvestsim.pages.dev/play/harvest-simulator.html">
+    <meta property="og:type" content="game">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Play Harvest Simulator">
+    <meta name="twitter:description" content="Click, plant, harvest, and upgrade your way to farming glory. Free online simulation game.">
+    <meta name="twitter:image" content="/images/farmsimlogo.jpg">
+    <link rel="icon" href="/images/harvest-simulator.avif" type="image/x-icon">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "VideoGame",
+        "name": "Harvest Simulator",
+        "description": "Harvest Simulator is a browser-based farming simulation game where you grow crops, earn coins, and expand your land. Start small and become the ultimate harvester.",
+        "url": "https://playharvestsim.pages.dev/harvest-simulator",
+        "image": "/images/harvest-simulator.avif",
+        "genre": ["Simulation", "Idle", "Farming"],
+        "operatingSystem": "All (browser-based)",
+        "author": {
+            "@type": "Organization",
+            "name": "Bigfoot Games"
+        },
+        "applicationCategory": "GameApplication",
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.7",
+            "reviewCount": "382"
+        }
+    }
+    </script>
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://playharvestsim.pages.dev/harvest-simulator.html">
+    <link rel="icon" href="/images/harvest-simulator.avif" type="image/x-icon">
+
+    
 </head>
 
 <body>
