--- a/index.html
+++ b/index.html
@@ -139,7 +139,15 @@
       <h2>Ready to Play?</h2>
       <a href="/play/harvest-simulator.html" class="play-button enhanced-play-button">Play Now</a>
     </div>
-  
+    <!-- Ad for playblockpost with image background-->
+    <div class="slope-section-div">
+      <div class="ad-banner">
+        <h1 class="slope-headline h2-ad">BLOCKPOST</h1>
+        <div class="slope-section-blur"></div>
+        <a class="slope-cta-button" target="_Blank" href="https://playblockpost.pages.dev/"><h2 class="h2-ad">PLAY NOW</h2></a>
+      </div>
+    </div>
+  </section>
   </main>
 
   <footer>
