--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
   
 
   <nav>
-    <!--Add a title that says harvest simulator-->
-    <img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo">
-    <a href="#features">Features</a>
+    
+    <a href="/index.html"><img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo"></a>
+   <!-- <a href="#features">Features</a>
     <a href="#how-to-play">How to Play</a>
-    <a href="#reviews">Reviews</a>
+    <a href="#reviews">Reviews</a>-->
   </nav>
 <header>
     <div class="container">
@@ -142,7 +142,7 @@
     <!-- Ad for playblockpost with image background-->
     <div class="slope-section-div">
       <div class="ad-banner">
-        <h1 class="slope-headline h2-ad">BLOCKPOST</h1>
+        <h1 class="slope-headline h2-ad-title">Play BLOCKPOST</h1>
         <div class="slope-section-blur"></div>
         <a class="slope-cta-button" target="_Blank" href="https://playblockpost.pages.dev/"><h2 class="h2-ad">PLAY NOW</h2></a>
       </div>
