--- a/play/harvest-simulator.html
+++ b/play/harvest-simulator.html
@@ -28,13 +28,12 @@
 
 
   <nav>
-    <img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo">
-    <a href="../index.html">Homepage</a>
+<a href="/index.html"><img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo"></a>    <a href="../index.html" style="display: none;">Homepage</a>
   </nav>
  
 
-  <main class="section">
-    <h2>Harvest Simulator</h2>
+ 
+    <h2 style="text-align: center; font-size: 3rem; color: #ffffff;margin: 20px;">Harvest Simulator</h2>
     <div style="width:100%; max-width: 960px; margin:auto; aspect-ratio: 16 / 9; background-color: #1e1e1e; border: 2px solid #4CAF50; border-radius: 0.5rem; overflow: hidden;">
       <!-- Replace with real iframe or canvas -->
       <iframe 
@@ -44,12 +43,20 @@
         height="100%" 
         frameborder="0" 
         allowfullscreen 
-        style="min-height: 480px;">
-      </iframe>
-      
-    </div>
-        <button id="fullscreen-btn" style="margin-top: 2.5rem;">Go Fullscreen</button>
+        style="min-height: 480px;"></iframe>
 
+    </div>
+        <button id="fullscreen-btn" style="margin-top: 2.5rem;margin-bottom: 2.5rem;">Go Fullscreen</button>
+        <!-- Ad for playblockpost with image background-->
+    <div class="slope-section-div">
+      <div class="ad-banner">
+        <h1 class="slope-headline h2-ad-title">Play BLOCKPOST</h1>
+        <div class="slope-section-blur"></div>
+        <a class="slope-cta-button" target="_Blank" href="https://playblockpost.pages.dev/"><h2 class="h2-ad">PLAY NOW</h2></a>
+      </div>
+    </div>
+ <main class="section">
+  <img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="game-logo">
     <section style="margin-top: 2rem;">
       <h3>Game Overview</h3>
       <p>Harvest Simulator is a free, browser-based farming game where you can plant crops, harvest them for coins, and expand your farm. No downloads required!</p>
