--- a/play/harvest-simulator.html
+++ b/play/harvest-simulator.html
@@ -34,7 +34,7 @@
 
  
     <h2 style="text-align: center; font-size: 3rem; color: #ffffff;margin: 20px;">Harvest Simulator</h2>
-    <div style="width:100%; max-width: 960px; margin:auto; aspect-ratio: 16 / 9; background-color: #1e1e1e; border: 2px solid #4CAF50; border-radius: 0.5rem; overflow: hidden;">
+    <div style="width:100%; max-width: 960px; margin:auto; aspect-ratio: 16 / 9; background-color: #1e1e1e; border: 3px solid #ffffff; border-radius: 0.5rem; overflow: hidden;">
       <!-- Replace with real iframe or canvas -->
       <iframe 
         src="/play/harvest-sim-files/frivez.com/games/harvest-simulator/index.html" 
