--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <nav>
     
-    <a href="/index.html"><img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo"></a>
+    <a href="/index.html"><img src="/images/farmingsimsocial.png" alt="Harvest Simulator Logo" class="nav-logo"></a>
    <!-- <a href="#features">Features</a>
     <a href="#how-to-play">How to Play</a>
     <a href="#reviews">Reviews</a>-->
@@ -103,7 +103,39 @@
 
     </section>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/NGmOwdbl44Q?si=EuL_-OY_-uUjtKkC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" class="yt-iframe"></iframe>
-
+    <!-- SEO Articles Section -->
+    <section id="articles" class="section">
+      <h2>Harvest Simulator Articles & Guides</h2>
+      <article>
+        <h3>Beginner’s Guide to Harvest Simulator</h3>
+        <p>Harvest Simulator is a free browser-based farming game where you start with a small plot and basic tools. Plant seeds, wait for crops to grow, and harvest them to earn coins. As you progress, you can upgrade your tools, buy new land, and automate your farm for maximum efficiency. This guide will help new players get started and thrive in the world of Harvest Simulator.</p>
+      </article>
+      <article>
+        <h3>Top Tips for Growing Your Farm Fast</h3>
+        <p>To expand your farm quickly in Harvest Simulator, focus on upgrading your harvesting tools and reinvesting your coins into new plots. Automation is key—unlock it as soon as possible to maximize your crop yield. Don’t forget to participate in seasonal events for bonus rewards and achievements!</p>
+      </article>
+      <article>
+        <h3>Why Play Harvest Simulator?</h3>
+        <p>Harvest Simulator offers a relaxing and rewarding farming experience with no downloads or in-app purchases. The game runs smoothly on any device, including Chromebooks and tablets. With real-time crop growth, tool upgrades, and a friendly community, it’s the perfect game for fans of simulation and idle games.</p>
+      </article>
+      <article>
+        <h3>How to Unlock Automation in Harvest Simulator</h3>
+        <p>Automation is a game-changer in Harvest Simulator. To unlock it, reach a certain level and invest your coins in the automation upgrade. Once enabled, your farm will continue to plant and harvest crops even when you’re away, allowing you to earn coins passively and focus on expanding your land.</p>
+      </article>
+      <article>
+        <h3>Harvest Simulator vs. Other Farming Games</h3>
+        <p>Unlike many farming games, Harvest Simulator is completely free and browser-based. There are no ads interrupting gameplay and no pay-to-win mechanics. The game emphasizes strategy, upgrades, and community events, making it a standout choice for players seeking a fair and enjoyable farming experience.</p>
+      </article>
+      <article>
+        <h3>Frequently Asked Questions About Harvest Simulator</h3>
+        <ul>
+          <li><strong>Is Harvest Simulator free?</strong> Yes, it’s 100% free to play in your browser.</li>
+          <li><strong>Can I play on mobile?</strong> Yes, the game is optimized for both desktop and mobile devices.</li>
+          <li><strong>Are there any in-app purchases?</strong> No, all features are available for free.</li>
+          <li><strong>How do I save my progress?</strong> Your progress is saved automatically in your browser.</li>
+        </ul>
+      </article>
+    </section>
     <!-- How to Play -->
     <section id="how-to-play" class="section">
       <h2>How to Play</h2>
@@ -133,12 +165,13 @@
         <p>"It looks basic at first, but once I unlocked automation and seasons, it got really strategic." – Leah K.</p>
       </article>
     </section>
-    <div id='tpYtContainer'><iframe width="540" height="920" src="https://www.youtube.com/embed/I8l5ijGQ1xs" frameborder="0" class="yt-iframe"></iframe></div>
+    <div id="tpYtContainer"><iframe width="540" height="920" src="https://www.youtube.com/embed/I8l5ijGQ1xs" frameborder="0" class="yt-iframe"></iframe></div>
     <!--Play now-->
     <div class="play-now">
       <h2>Ready to Play?</h2>
       <a href="/play/harvest-simulator.html" class="play-button enhanced-play-button">Play Now</a>
     </div>
+
     <!-- Ad for playblockpost with image background-->
     <div class="slope-section-div">
       <div class="ad-banner">
@@ -147,7 +180,77 @@
         <a class="slope-cta-button" target="_Blank" href="https://playblockpost.pages.dev/"><h2 class="h2-ad">PLAY NOW</h2></a>
       </div>
     </div>
-  </section>
+    <!-- Articles Preview Section -->
+    <section id="article-previews" class="section">
+      <h2>Latest Harvest Simulator Articles</h2>
+      <div class="article-previews-grid">
+        <a href="/articles/the-ultimate-guide-to-harvest-simulator.html" class="article-preview">
+          <img src="/images/farming-simulator-25-key-art.avif" alt="The Ultimate Guide to Harvest Simulator" class="article-image">
+          <h3>The Ultimate Guide to Harvest Simulator</h3>
+          <p>A comprehensive guide to tips, features, and strategies for new and experienced players.</p>
+        </a>
+        <a href="/articles/mastering-automation-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/Frame-19-1-1.webp" alt="Mastering Automation in Harvest Simulator" class="article-image">
+          <h3>Mastering Automation in Harvest Simulator</h3>
+          <p>Unlock and optimize automation to make your farm thrive with minimal effort.</p>
+        </a>
+        <a href="/articles/expanding-your-farm-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/blockpost.jpg" alt="Expanding Your Farm in Harvest Simulator" class="article-image">
+          <h3>Expanding Your Farm in Harvest Simulator</h3>
+          <p>Learn the best strategies for land expansion and maximizing your farm’s output.</p>
+        </a>
+        <a href="/articles/harvest-simulator-for-beginners.html" class="article-preview">
+          <img src="/images/farmingsimsocial.png" alt="Harvest Simulator for Beginners" class="article-image">
+          <h3>Harvest Simulator for Beginners</h3>
+          <p>Essential first steps and tips for new players to start their farming journey.</p>
+        </a>
+        <a href="/articles/best-crops-to-plant-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/farmsimlogo.jpg" alt="Best Crops to Plant in Harvest Simulator" class="article-image">
+          <h3>The Best Crops to Plant in Harvest Simulator</h3>
+          <p>Discover the most profitable and efficient crops for every stage of the game.</p>
+        </a>
+        <a href="/articles/how-to-earn-coins-fast-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/81dWaxaiOeL.jpg" alt="How to Earn Coins Fast in Harvest Simulator" class="article-image">
+          <h3>How to Earn Coins Fast in Harvest Simulator</h3>
+          <p>Top strategies for earning coins quickly and growing your farm faster.</p>
+        </a>
+        <a href="/articles/unlocking-achievements-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvestsimtextlogo.png" alt="Unlocking Achievements in Harvest Simulator" class="article-image">
+          <h3>Unlocking Achievements: A Completionist’s Guide</h3>
+          <p>Tips and tricks for unlocking every achievement and earning all the rewards.</p>
+        </a>
+        <a href="/articles/seasonal-events-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/yt-shorts-thumb.png" alt="Seasonal Events in Harvest Simulator" class="article-image">
+          <h3>Seasonal Events in Harvest Simulator</h3>
+          <p>Everything you need to know about participating in and winning seasonal events.</p>
+        </a>
+        <a href="/articles/mobile-vs-desktop-harvest-simulator.html" class="article-preview">
+          <img src="/images/hq720.jpg" alt="Mobile vs Desktop: Playing Harvest Simulator Anywhere" class="article-image">
+          <h3>Mobile vs Desktop: Playing Harvest Simulator Anywhere</h3>
+          <p>Compare the experience and get tips for playing on any device.</p>
+        </a>
+        <a href="/articles/the-role-of-upgrades-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvest-simulator.avif" alt="The Role of Upgrades in Harvest Simulator" class="article-image">
+          <h3>The Role of Upgrades: Maximizing Your Farm’s Potential</h3>
+          <p>How to use upgrades to boost your farm’s growth and efficiency.</p>
+        </a>
+        <a href="/articles/community-and-social-features-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/farmingsimsocial.png" alt="Community and Social Features in Harvest Simulator" class="article-image">
+          <h3>Community and Social Features in Harvest Simulator</h3>
+          <p>Explore the game’s social features and connect with other players.</p>
+        </a>
+        <a href="/articles/troubleshooting-and-faq-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvestsimtextlogo.png" alt="Troubleshooting & FAQ: Common Issues Solved" class="article-image">
+          <h3>Troubleshooting & FAQ: Common Issues Solved</h3>
+          <p>Find solutions to common problems and frequently asked questions.</p>
+        </a>
+        <a href="/articles/future-of-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvestsimHDlogo.jpg" alt="The Future of Harvest Simulator" class="article-image">
+          <h3>The Future of Harvest Simulator: Upcoming Features & Updates</h3>
+          <p>A look at upcoming features, updates, and what’s next for the game.</p>
+        </a>
+      </div>
+    </section>
   </main>
 
   <footer>
