Updates assets and adds article previews section
Replaces logo image in navigation for better branding consistency.
Removes redundant spacing in index.html and introduces a new iframe for YouTube content.
Adds an article previews section to showcase relevant content in harvest-simulator.html, improving user engagement.
Ensures logo image alignment across pages for cohesive design.

--- a/play/harvest-simulator.html
+++ b/play/harvest-simulator.html
@@ -55,8 +55,80 @@
         <a class="slope-cta-button" target="_Blank" href="https://playblockpost.pages.dev/"><h2 class="h2-ad">PLAY NOW</h2></a>
       </div>
     </div>
- <main class="section">
-  <img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="game-logo">
+  </div>
+  <!-- Articles Preview Section -->
+    <section id="article-previews" class="section">
+      <h2>Latest Harvest Simulator Articles</h2>
+      <div class="article-previews-grid">
+        <a href="/articles/the-ultimate-guide-to-harvest-simulator.html" class="article-preview">
+          <img src="/images/farming-simulator-25-key-art.avif" alt="The Ultimate Guide to Harvest Simulator" class="article-image">
+          <h3>The Ultimate Guide to Harvest Simulator</h3>
+          <p>A comprehensive guide to tips, features, and strategies for new and experienced players.</p>
+        </a>
+        <a href="/articles/mastering-automation-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/Frame-19-1-1.webp" alt="Mastering Automation in Harvest Simulator" class="article-image">
+          <h3>Mastering Automation in Harvest Simulator</h3>
+          <p>Unlock and optimize automation to make your farm thrive with minimal effort.</p>
+        </a>
+        <a href="/articles/expanding-your-farm-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/blockpost.jpg" alt="Expanding Your Farm in Harvest Simulator" class="article-image">
+          <h3>Expanding Your Farm in Harvest Simulator</h3>
+          <p>Learn the best strategies for land expansion and maximizing your farm’s output.</p>
+        </a>
+        <a href="/articles/harvest-simulator-for-beginners.html" class="article-preview">
+          <img src="/images/farmingsimsocial.png" alt="Harvest Simulator for Beginners" class="article-image">
+          <h3>Harvest Simulator for Beginners</h3>
+          <p>Essential first steps and tips for new players to start their farming journey.</p>
+        </a>
+        <a href="/articles/best-crops-to-plant-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/farmsimlogo.jpg" alt="Best Crops to Plant in Harvest Simulator" class="article-image">
+          <h3>The Best Crops to Plant in Harvest Simulator</h3>
+          <p>Discover the most profitable and efficient crops for every stage of the game.</p>
+        </a>
+        <a href="/articles/how-to-earn-coins-fast-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/81dWaxaiOeL.jpg" alt="How to Earn Coins Fast in Harvest Simulator" class="article-image">
+          <h3>How to Earn Coins Fast in Harvest Simulator</h3>
+          <p>Top strategies for earning coins quickly and growing your farm faster.</p>
+        </a>
+        <a href="/articles/unlocking-achievements-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvestsimtextlogo.png" alt="Unlocking Achievements in Harvest Simulator" class="article-image">
+          <h3>Unlocking Achievements: A Completionist’s Guide</h3>
+          <p>Tips and tricks for unlocking every achievement and earning all the rewards.</p>
+        </a>
+        <a href="/articles/seasonal-events-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/yt-shorts-thumb.png" alt="Seasonal Events in Harvest Simulator" class="article-image">
+          <h3>Seasonal Events in Harvest Simulator</h3>
+          <p>Everything you need to know about participating in and winning seasonal events.</p>
+        </a>
+        <a href="/articles/mobile-vs-desktop-harvest-simulator.html" class="article-preview">
+          <img src="/images/hq720.jpg" alt="Mobile vs Desktop: Playing Harvest Simulator Anywhere" class="article-image">
+          <h3>Mobile vs Desktop: Playing Harvest Simulator Anywhere</h3>
+          <p>Compare the experience and get tips for playing on any device.</p>
+        </a>
+        <a href="/articles/the-role-of-upgrades-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvest-simulator.avif" alt="The Role of Upgrades in Harvest Simulator" class="article-image">
+          <h3>The Role of Upgrades: Maximizing Your Farm’s Potential</h3>
+          <p>How to use upgrades to boost your farm’s growth and efficiency.</p>
+        </a>
+        <a href="/articles/community-and-social-features-in-harvest-simulator.html" class="article-preview">
+          <img src="/images/farmingsimsocial.png" alt="Community and Social Features in Harvest Simulator" class="article-image">
+          <h3>Community and Social Features in Harvest Simulator</h3>
+          <p>Explore the game’s social features and connect with other players.</p>
+        </a>
+        <a href="/articles/troubleshooting-and-faq-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvestsimtextlogo.png" alt="Troubleshooting & FAQ: Common Issues Solved" class="article-image">
+          <h3>Troubleshooting & FAQ: Common Issues Solved</h3>
+          <p>Find solutions to common problems and frequently asked questions.</p>
+        </a>
+        <a href="/articles/future-of-harvest-simulator.html" class="article-preview">
+          <img src="/images/harvestsimHDlogo.jpg" alt="The Future of Harvest Simulator" class="article-image">
+          <h3>The Future of Harvest Simulator: Upcoming Features & Updates</h3>
+          <p>A look at upcoming features, updates, and what’s next for the game.</p>
+        </a>
+      </div>
+    </section>
+  <main class="section">
+    <img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="game-logo">
     <section style="margin-top: 2rem;">
       <h3>Game Overview</h3>
       <p>Harvest Simulator is a free, browser-based farming game where you can plant crops, harvest them for coins, and expand your farm. No downloads required!</p>
@@ -111,7 +183,6 @@
       <p>⭐️⭐️⭐️⭐️ "Great idle game, perfect for quick breaks." - Marcus D.</p>
       <p>⭐️⭐️⭐️⭐️ "Better than most mobile games, runs great on my Chromebook!" - Sarah L.</p>
     </section>
-
     <section style="margin-top: 2rem;">
       <h3>About Harvest Simulator</h3>
       <p>Harvest Simulator is a free, browser-based farming game where you can plant crops, harvest them for coins, and expand your farm. No downloads required!</p>
