--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <nav>
     
-    <a href="/index.html"><img src="/images/farmingsimsocial.png" alt="Harvest Simulator Logo" class="nav-logo"></a>
+    <a href="/index.html"><img src="/images/harvestsimtextlogo.png" alt="Harvest Simulator Logo" class="nav-logo"></a>
    <!-- <a href="#features">Features</a>
     <a href="#how-to-play">How to Play</a>
     <a href="#reviews">Reviews</a>-->
@@ -100,7 +100,6 @@
         <li>💸 Trade resources and invest in automation</li>
       <li>🎉 Earn achievements and seasonal event rewards</li>
       </ul>
-
     </section>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/NGmOwdbl44Q?si=EuL_-OY_-uUjtKkC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" class="yt-iframe"></iframe>
     <!-- SEO Articles Section -->
@@ -136,6 +135,8 @@
         </ul>
       </article>
     </section>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/-mcl3cTpkdw?si=i3c6EfC_21aGQIFf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" class="yt-iframe"></iframe>
+
     <!-- How to Play -->
     <section id="how-to-play" class="section">
       <h2>How to Play</h2>
