--- a/play/harvest-simulator.html
+++ b/play/harvest-simulator.html
@@ -23,6 +23,7 @@
   <!-- Favicon  -->
   <link rel="icon" href="/images/harvest-simulator.avif" type="image/x-icon">
   <link rel="stylesheet" href="../styles.css" />
+  <link rel="canonical" href="https://playharvestsim.pages.dev/play/harvest-simulator.html" />
 </head>
 <body>
 
